Transitioned title to bootstrap formatting

--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -1,7 +1,8 @@
 <link rel="stylesheet" type="text/css" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-<div style="background-color: #880f42; padding: 70px; text-align: center;">
-    <h1 style="color: white;"> FREQUENTLY ASKED QUESTIONS </h1>
+<div class="jumbotron jumbotron-fluid text-center" style="background-color: #880f42; color:#fff;">
+    <h1>FAQs</h1>
 </div>
+
 <div class="jumbotron">
   <h3 style="text-align: center">ABOUT US</h3>
     <p style = "text-align:center; padding-left: 20px; padding-right: 20px">
